Bug 171480 - Visual indicator missing for 100% zoom level
Summary: Visual indicator missing for 100% zoom level
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Preview-Image (other bugs)
Version First Reported In: 0.10.0
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-22 23:11 UTC by kgw
Modified: 2012-06-27 11:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kgw 2008-09-22 23:11:52 UTC
Version:            (using Devel)
Installed from:    Compiled sources

If you are changing zoom level with the combination of ctrl-key and mouse wheel then there is no indication of what zoom ratio has been achieved as this is only visible as a tooltip of the zoom slider. A seperate visual indicator (for example as tick markers on the zoom slider) with 100% marked clearly would be helping a lot...
Comment 1 caulier.gilles 2008-12-03 16:40:03 UTC
Andi, 

This problem can be fixed with current implementation to force zoom slider to show tooltip value during a small lapse  of time using a timer, when user change zoom level using keywords...

Gilles

Comment 2 Andi Clemens 2008-12-03 17:18:43 UTC
I will take a look at this...
Comment 3 Andi Clemens 2008-12-07 12:41:51 UTC
SVN commit 893727 by aclemens:

add methods to autoshow / autohide the tooltip of statuszoombar widget

BUG:171480

 M  +2 -1      NEWS  
 M  +5 -3      digikam/digikamapp.cpp  
 M  +42 -9     libs/widgets/common/dcursortracker.cpp  
 M  +27 -12    libs/widgets/common/dcursortracker.h  
 M  +10 -5     libs/widgets/common/statuszoombar.cpp  
 M  +1 -0      libs/widgets/common/statuszoombar.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=893727