add methods to autoshow / autohide the tooltip of statuszoombar widget

BUG:171480

svn path=/trunk/extragear/graphics/digikam/; revision=893727