digikam/digikamapp.cpp
@@ -31,8 +31,8 @@
 
 #include <QDataStream>
 #include <QLabel>
-#include <QStringList>
 #include <QSignalMapper>
+#include <QStringList>
 #include <QtDBus>
 
 // KDE includes.
@@ -81,13 +81,13 @@
 
 // LibKIPI includes.
 
-#include <libkipi/plugin.h>
 #include <libkipi/interface.h>
+#include <libkipi/plugin.h>
 
 // Libkdcraw includes.
 
-#include <libkdcraw/version.h>
 #include <libkdcraw/kdcraw.h>
+#include <libkdcraw/version.h>
 
 #if KDCRAW_VERSION < 0x000400
 #include <libkdcraw/dcrawbinary.h>
@@ -2295,12 +2295,14 @@ void DigikamApp::slotThumbSizeChanged(int size)
 {
     d->statusZoomBar->setZoomSliderValue(size);
     d->statusZoomBar->setZoomTrackerText(i18n("Size: %1", size));
+    d->statusZoomBar->triggerZoomTrackerToolTip();
 }
 
 void DigikamApp::slotZoomChanged(double zoom, int size)
 {
     d->statusZoomBar->setZoomSliderValue(size);
     d->statusZoomBar->setZoomTrackerText(i18n("zoom: %1%", (int)(zoom*100.0)));
+    d->statusZoomBar->triggerZoomTrackerToolTip();
 }
 
 void DigikamApp::slotTogglePreview(bool t)
